Just added a new comment

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="#" target="_blank" class="navbtn">Free Code</a></li>
         </ul>
       </nav>
+      <!-- Mobile Navbar -->
       <div class="mobile-navbar">
         <ion-icon name="menu" class="icons"></ion-icon>
         <ion-icon name="close" class="icons"></ion-icon>
